--- a/sfAdminThemejRollerPlugin/config/app.yml
+++ b/sfAdminThemejRollerPlugin/config/app.yml
@@ -13,7 +13,7 @@ all:
     # ThemeRoller name
     # (depends on theme_dir option)
     # browse: http://jqueryui.com/themeroller/
-    theme:          redmond
+    theme:          ui-lightness
 
     # activates the jQuery UI widget to dynamically change theme
     # http://jqueryui.com/docs/Theming/ThemeSwitcher
