--- a/sfDoctrineGuardPlugin/config/app.yml
+++ b/sfDoctrineGuardPlugin/config/app.yml
@@ -1,6 +1,6 @@
 all:
   sf_guard_plugin:
-    allow_login_with_email : false
+    allow_login_with_email : true
     routes_register: true
   email:
     notification_email: somebody@gmail.com    
